# polyderboard

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md
deployments/: Dockerfile
deployments/polyderboard-dev/: docker-compose.yml
development/: Dockerfile  docker-compose.yml
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/charts/: LivePriceChart.tsx  PnlChart.tsx  PnlDistribution.tsx  TradeActivity.tsx
frontend/src/components/: AddToListButton.tsx  AddressCell.tsx  AuthGate.tsx  ConnectWallet.tsx  Layout.tsx  Pagination.tsx  SortHeader.tsx  Spinner.tsx
frontend/src/config/: wagmi.ts
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAlerts.ts  useMarketWs.ts  useSignalFeed.ts  useTradeWs.ts  useTraderLists.ts
frontend/src/lib/: format.ts  motion.ts
frontend/src/pages/: Activity.tsx  Alerts.tsx  Dashboard.tsx  Lab.tsx  MarketDetail.tsx  TraderDetail.tsx
frontend/src/pages/lab/: Backtester.tsx  CopyPortfolio.tsx  ListSelector.tsx  SignalFeed.tsx  TraderListManager.tsx  shared.tsx
indexer/: polywatcher.yaml
indexer/abi/: ConditionalTokens.json  NegRiskCTFExchange.json
indexer/clickhouse/: init.sql
scripts/: backfill.sh  deploy.sh  indexer.sh  publish.sh  queries.sh
src/: main.rs
src/api/: alerts.rs  auth.rs  db.rs  markets.rs  middleware.rs  mod.rs  routes.rs  server.rs  types.rs  ws_subscriber.rs
