[package]
name = "poly-dearboard"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json", "ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clickhouse = { version = "0.13", features = ["rustls-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dotenv = "0.15"
