[package]
name = "poly-dearboard"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json", "ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clickhouse = { version = "0.13", features = ["rustls-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
alloy-primitives = { version = "1", features = ["k256"] }
alloy-sol-types = "1"
jsonwebtoken = "9"
rand = "0.9"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
